--- a/.env
+++ b/.env
@@ -1,14 +1,15 @@
-
-SITE_NAME_HEADER=Digital Garden
+THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/HEAD/theme.css
+BASE_THEME=dark
+SITE_NAME_HEADER=DJTL's Digital Garden
 SITE_BASE_URL=https://my-digital-garden-alpha.vercel.app/
-SHOW_CREATED_TIMESTAMP=false
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
-SHOW_UPDATED_TIMESTAMP=false
+SHOW_UPDATED_TIMESTAMP=true
 NOTE_ICON_DEFAULT=
-NOTE_ICON_TITLE=false
-NOTE_ICON_FILETREE=false
-NOTE_ICON_INTERNAL_LINKS=false
-NOTE_ICON_BACK_LINKS=false
+NOTE_ICON_TITLE=true
+NOTE_ICON_FILETREE=true
+NOTE_ICON_INTERNAL_LINKS=true
+NOTE_ICON_BACK_LINKS=true
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
