--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/isax785/obsidian-sparkling-night/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=DJTL's Digital Garden
-SITE_BASE_URL=https://my-digital-garden-dvtcu0y7x-mydjtl.vercel.app/
+SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
