--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 THEME=https://raw.githubusercontent.com/isax785/obsidian-sparkling-night/HEAD/theme.css
 BASE_THEME=dark
 SITE_NAME_HEADER=DJTL's Digital Garden
-SITE_BASE_URL=
+SITE_BASE_URL=https://my-digital-garden-alpha.vercel.app/
 SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=true
